# MasiC

./: .gitignore  .gitmodules  CLAUDE.md  README.md  SCOPE.md  SETUP.md  pyproject.toml
cells/: README.md
cells/AND2/: cell.litematic  manifest.yaml
cells/DFF/: cell.litematic  manifest.yaml
cells/NAND2/: cell.litematic  manifest.yaml
cells/NOT/: cell.litematic  manifest.yaml
cells/OR2/: cell.litematic  manifest.yaml
src/masic/: __init__.py  cell_library.py  cli.py  cosim.py  emit.py  frontend.py  ir.py  place.py  route.py  router3d.py  router_channel.py  tech_map.py
tests/: test_cell_library.py  test_corpus.py  test_frontend.py  test_pipeline.py  test_router3d.py  test_smoke.py
tests/handwritten/: and2.v  full_adder.v
