[project]
name = "masic"
version = "0.0.1"
description = "SystemVerilog to Minecraft redstone synthesis"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Zhenghao Xu" }]
dependencies = [
    "litemapy>=0.10",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.10",
]

[project.scripts]
masic = "masic.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/masic"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
